# ManualConvNet

./: .gitignore  .gitmodules  CMakeLists.txt  constants.h  conv_layer.cpp  conv_layer.h  conv_net.cpp  conv_net.h  dataset.cpp  dataset.h  dense_layer.cpp  dense_layer.h  dense_layer.tpp  dense_net.cpp  dense_net.h  input_layer.cpp  input_layer.h  input_layer.tpp  layer.h  log.txt  main.cpp  matrices.cpp  matrices.h  maxpool_layer.cpp  maxpool_layer.h  softmax_layer.cpp  softmax_layer.h  softmax_layer.tpp  visualizer.cpp
Common/: CMakeLists.txt  constants.h  dataset.cpp  dataset.h  softmax_layer.cpp  softmax_layer.h
ConvNet/: CMakeLists.txt  conv_input.cpp  conv_input.h  conv_layer.cpp  conv_layer.h  conv_net.cpp  conv_net.h  matrices.cpp  matrices.h  nd_layer.h  visualizer.h
LinearNet/: CMakeLists.txt  dense_layer.cpp  dense_layer.h  dense_net.cpp  dense_net.h  input_layer.cpp  input_layer.h  linear_layer.h  softmax_layer.cpp  softmax_layer.h
